--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     ]
   },
   "dependencies": {
+    "@types/react-transition-group": "^4.4.1",
     "react": "^16.12.0",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@umijs/preset-react": "1.x",
