--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,18 +1,37 @@
-  
-name: github pages
+# 项目名
+name: deploy
+
+# 只有在master分支发生push事件时触发
 on:
   push:
     branches:
       - master
+
+# 工作流
 jobs:
-  deploy:
-    runs-on: ubuntu-18.04
+  build-and-deploy:
+    runs-on: ubuntu-latest # 运行环境
+
     steps:
-      - uses: actions/checkout@v2
-      - run: yarn install
-      - run: yarn docs:build
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      # 拉代码
+      - name: Checkout code
+        uses: actions/checkout@v1
+
+      # 下载node，我这里指定了15.x，这个版本可随意，高于dumi规定的node版本即可
+      - name: Use Node.js
+        uses: actions/setup-node@v1
         with:
-          github_token: ${{ secrets.UI_GITHUB_TOKEN }}
-          publish_dir: ./dist
+          node-version: 15.x
+
+      # 打包代码
+      - name: Build Project
+        run: |
+          npm install
+          npm run docs:build
+
+      # 部署到github
+      - name: Deploy to Github
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          branch: gh-pages # 打包的内容放到gh-pages分支下
+          folder: dist
